# AITA

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  rubric_adjustments.txt  test_improved_ingest_pipeline.py  test_ingest_pipeline.py  test_integration.py  test_intelligent_adjustments.txt  test_real_extraction.py
aita/: __init__.py  __main__.py  config.py  main.py
aita/domain/: exam_reconstruct.py  models.py
aita/pipelines/: extract_questions.py  generate_rubric.py  grade.py  ingest.py  transcribe.py
aita/report/: __init__.py  grading_report.py  transcription_report.py
aita/services/: crop.py  first_page_detector.py  fuzzy.py  ocr.py  storage.py
aita/templates/: transcription_report.html
aita/utils/: checkpoint.py  files.py  images.py  llm_task_implementations.py  llm_tasks.py  logging.py  parallel_executor.py  prompts.py  rate_limiter.py  rubric_adjustment.py  transcription_helpers.py
data/: roster.csv
docs/: PARALLEL_EXECUTION_IMPLEMENTATION.md  PARALLEL_EXECUTION_README.md  implementation_plan.md  installation.md  llm_usage_examples.md  parallel_execution_guide.md  question_extraction_guide.md  rubric_generation_guide.md  storage_service_guide.md  user_guide.md
examples/: extract_questions_demo.py  rubric_generation_demo.py
intermediateproduct/grading_results/: index.html
intermediateproduct/rubrics/: question_specific_instructions.json.example  rubric_instructions.txt.example  user_rubrics.json.example
test/: complete_rubric_test.txt  over_specification_test.txt  partial_rubric_test.txt  test_cost_integration.py  test_cost_tracking.py  test_enhanced_rubric_retry.py  test_generate_rubric.py  test_llm_task_implementations.py  test_parallel_executor.py  test_parallel_integration.py  test_run_question_extraction.py  test_transcription_helpers.py
tests/: test_diagnostic_pipeline.py  test_image_transcription.py  test_llm_vision_pipeline.py  test_ocr_complete.py  test_ocr_simple.py  view_diagnostic_results.py
tests/pipelines/: __init__.py  test_extract_questions.py  (+2 more)
(+11 files in other folders)
